# azentrix-fullstack-task1

./: .gitignore  README.md  app.py  pyproject.toml  rag_pipeline.py  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
.streamlit/: config.toml
scripts/: debug_rag.py
tests/: test_rag_pipeline.py
