[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-aware-document-qabot"
version = "0.1.0"
description = "Local context-aware document Q&A bot built with Streamlit, Ollama, FAISS, and embeddings."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["rag", "document", "qa", "streamlit", "ollama", "faiss", "nlp"]
dependencies = [
    "streamlit>=1.58.0,<2.0",
    "ollama>=0.6.2,<1.0",
    "langchain>=1.3.11,<2.0",
    "langchain-community>=0.4.2,<1.0",
    "langchain-core>=1.4.8,<2.0",
    "langchain-huggingface>=1.2.2,<2.0",
    "langchain-ollama>=1.1.0,<2.0",
    "langchain-text-splitters>=1.1.2,<2.0",
    "faiss-cpu>=1.14.3,<2.0",
    "sentence-transformers>=5.6.0,<6.0",
    "pypdf>=6.14.2,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "black>=24.3.0,<25.0",
    "ruff>=0.0.284,<1.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
